--- a/Assignment5/Makefile
+++ b/Assignment5/Makefile
@@ -1,43 +1,26 @@
-# Переменные
 CXX = g++
-CXXFLAGS = -Werror -Wpedantic -Wall -std=c++17  # Убедитесь, что используете стандарт C++17 или выше
-SRC = main.cpp Transformer.cpp OptimusPrime.cpp Bumblebee.cpp Megatron.cpp Weapon.cpp
-OBJ = $(SRC:.cpp=.o)
-EXEC = main
+CXXFLAGS = -std=c++14 -Wall -Werror -Wpedantic -I$(GTEST_DIR)/include -pthread
+TARGET = main
+TEST_TARGET = test
 
-# Добавим файлы для тестов
-TEST_SRC = test.cpp
-TEST_OBJ = $(TEST_SRC:.cpp=.o)
-TEST_EXEC = test_exec  # Уникальное имя для исполнимого файла тестов
+SRCS = Transformer.cpp Autobot.cpp Decepticon.cpp Weapon.cpp Vehicle.cpp main.cpp
+TEST_SRCS = test.cpp Transformer.cpp Autobot.cpp Decepticon.cpp Weapon.cpp Vehicle.cpp
 
-# Правило по умолчанию
-all: $(EXEC)
+OBJS = $(SRCS:.cpp=.o)
+TEST_OBJS = $(TEST_SRCS:.cpp=.o)
 
-# Линкование исполнимого файла
-$(EXEC): $(OBJ)
-	$(CXX) $(CXXFLAGS) $(OBJ) -o $(EXEC)
+all: $(TARGET)
 
-# Линкование исполнимого файла для тестов
-$(TEST_EXEC): $(OBJ) $(TEST_OBJ)
-	$(CXX) $(CXXFLAGS) $(OBJ) $(TEST_OBJ) -o $(TEST_EXEC) -lgtest -lgtest_main -pthread
+$(TARGET): $(OBJS)
+	$(CXX) $(CXXFLAGS) $(OBJS) -o $(TARGET)
 
-# Компиляция исходных файлов
+test: $(TEST_OBJS)
+	$(CXX) $(CXXFLAGS) $(TEST_OBJS) -lgtest -lgtest_main -o $(TEST_TARGET)
+	./$(TEST_TARGET)
+
 %.o: %.cpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
-# Очистка промежуточных файлов
 clean:
-	rm -f $(OBJ) $(EXEC) $(TEST_OBJ) $(TEST_EXEC)
-
-# Прочие полезные команды
-run: $(EXEC)
-	./$(EXEC)
-
-# Команда для запуска тестов
-run_tests: $(TEST_EXEC)
-	./$(TEST_EXEC)
-
-# Форматирование исходников
-format:
-	astyle --style=allman *.cpp *.h
+	rm -f $(OBJS) $(TEST_OBJS) $(TARGET) $(TEST_TARGET)
 
